--- a/src/JFrame/teste.form
+++ b/src/JFrame/teste.form
@@ -18,6 +18,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,-97,0,0,3,-111"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -26,6 +27,9 @@
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="99" type="rgb"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[30, 30]"/>
         </Property>
       </Properties>
       <Constraints>
@@ -41,6 +45,9 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="99" type="rgb"/>
         </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[30, 30]"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
@@ -48,18 +55,174 @@
         </Constraint>
       </Constraints>
 
-      <Layout>
-        <DimensionLayout dim="0">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="100" max="32767" attributes="0"/>
-          </Group>
-        </DimensionLayout>
-        <DimensionLayout dim="1">
-          <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="415" max="32767" attributes="0"/>
-          </Group>
-        </DimensionLayout>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
+    </Container>
+    <Container class="javax.swing.JPanel" name="jPanel1">
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+          <BorderConstraints direction="Center"/>
+        </Constraint>
+      </Constraints>
+
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+      <SubComponents>
+        <Container class="javax.swing.JPanel" name="jPanel2">
+          <Properties>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[350, 385]"/>
+            </Property>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+              <BorderConstraints direction="Before"/>
+            </Constraint>
+          </Constraints>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="5"/>
+            <Property name="rows" type="int" value="5"/>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JButton" name="bt_a1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_a2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_a3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_a4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_a5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_b1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_b2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_b3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_b4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_b5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_c1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_c2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_c3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_c4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_c5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_d1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_d2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_d3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_d4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_d5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_e1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_e2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_e3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_e4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_e5">
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JPanel" name="jPanel3">
+          <Properties>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[350, 385]"/>
+            </Property>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+              <BorderConstraints direction="After"/>
+            </Constraint>
+          </Constraints>
+
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="5"/>
+            <Property name="rows" type="int" value="5"/>
+          </Layout>
+          <SubComponents>
+            <Component class="javax.swing.JButton" name="bt_f1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_f2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_f3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_f4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_f5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_g1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_g2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_g3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_g4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_g5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_h1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_h2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_h3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_h4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_h5">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_i1">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_i2">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_i3">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_i4">
+            </Component>
+            <Component class="javax.swing.JButton" name="bt_i5">
+            </Component>
+          </SubComponents>
+        </Container>
+        <Container class="javax.swing.JPanel" name="jPanel6">
+          <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="33" red="0" type="rgb"/>
+            </Property>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[100, 385]"/>
+            </Property>
+          </Properties>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+              <BorderConstraints direction="Center"/>
+            </Constraint>
+          </Constraints>
+
+          <Layout>
+            <DimensionLayout dim="0">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="183" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+            <DimensionLayout dim="1">
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <EmptySpace min="0" pref="385" max="32767" attributes="0"/>
+              </Group>
+            </DimensionLayout>
+          </Layout>
+        </Container>
+      </SubComponents>
     </Container>
   </SubComponents>
 </Form>
